# frazerport

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.py
src/: creds.py
src/command/: command.py
src/eval/: evaluate.py
src/time/: utils.py
todo/: features.md
todo/logs/context/: log
